# pdf-defang

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  cli.md  index.md  limitations.md  origin.md  protections.md  quickstart.md  use-cases.md
docs/compare/: commercial.md  dangerzone.md
examples/: README.md  audit_only.py  batch_processor.py  fastapi_async.py  flask_upload.py  s3_streaming.py
pdf_defang/: __init__.py  _async.py  _bytes.py  _core.py  _scan.py  cli.py
tests/: conftest.py  test_async.py  test_balanced.py  test_bytes.py  test_cli.py  test_edge_cases.py  test_encryption.py  test_new_protections.py  test_performance.py  test_sanitize.py  test_scan.py
tests/fixtures/: generate_fixtures.py
